--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="middle-container">
   <div class="profile">
-    <img src="images/beach.PNG" alt="beach-img">
+    <img src="images/beach.png" alt="beach-img">
     <h2>Hello !</h2>
     <h3>Sawasdee !</h3>
     <p class="intro">I am currenty studying in Entrepreneurship and Innovation Management.I 💚 am passionate about entrepreneurship and running my own business with innovation.</p>
