--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img src="images/beach.png" alt="beach-img">
     <h2>Hello !</h2>
     <h3>Sawasdee !</h3>
-    <p class="intro">I am currenty studying in Entrepreneurship and Innovation Management.I 💚 am passionate about entrepreneurship and running my own business with innovation.</p>
+    <p class="intro">I am currently studying in Entrepreneurship and Innovation Management. I 💚 am passionate about entrepreneurship and running my own business with innovation.</p>
 <br>
 <br>
 <br>
@@ -39,28 +39,27 @@
     <div class="skill-row">
       <img class="chomfarm-img" src="images/chomfarm.png" alt="chomfarm-img">
       <h3>Digital Marketing & Analytics</h3>
-      <p>I studied Business management majoring in Hotel and Tourism management.I have gained a wealth experience in the field of agricultural tourism management.I have learnt a lot about digital marketing and social media analytics when I was starting my agricultural business over the past few years .</p>
+      <p>I studied Business management majoring in Hotel and Tourism management. I have gained a wealth experience in the field of agricultural tourism management. I have learnt a lot about digital marketing and social media analytics when I was starting my agricultural business over the past few years .</p>
     </div>
 
     <div class="skill-row">
       <img class="content-img" src="images/content.png" alt="content-img">
       <h3>Content creation</h3>
-      <p> Content marketing is powerful. I am eager to learn how to build the story behind the brand. I am a content creator on Tiktok, Instagram and Facebook.</p>
+      <p>Content marketing is powerful. I am eager to learn how to build the story behind the brand. I am a content creator on Tiktok, Instagram and Facebook.</p>
     </div>
   </div>
-
 
 <hr>
   <br>
   <br>
-  <div class="contact-me">
+  <br>
+  <div class="contact-me>
     <h2>Get In Touch</h2>
     <h3>Follow me for more ! 💌 💯🌐.</h3>
     <p class="contact-message">There are a bunch of contents I have made on Tiktok, Instagram, and Facebook. Also, feel free to email me to get in touch !</p>
-    <a class="btn" href="nrodjinda@gmail.com">CONTACT ME</a>
+    <a class="btn" href="/contact-me1.html" target="_blank"> CONTACT ME</a>
   </div>
 </div>
-
 
 <div class="bottom-container"
   <a class="" href=""></a>
